# shentry

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGES.md  Makefile  README.md  circle.yml  justfile  pyproject.toml  requirements-tests.txt  setup.py  shentry  shentry.py  tox.ini
.github/workflows/: ci.yml
tests/: test_basic.py  test_integration.py
